--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Pick me box</title>
+    <title>Find my QR code :</title>
 </head>
 <body>
     <div class="header">
-        <h1>Pick me box!</h1>
     </div>
     <div class="container">
         <div class="box" onclick="navigateToPage(1)"></div>
