Fix iphone 14 pro max screen size and onClick animation

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <img class="heart-imageTop" src="heart1.png" alt="heart1">
     </div>    
     <div class="container">
-        <div class="box" onclick="navigateToPage(1)"></div>
-        <div class="box" onclick="navigateToPage(2)"></div>
-        <div class="box" onclick="navigateToPage(2)"></div>
-    </div>
+        <div class="box" onclick="addClickAnimation(this); navigateToPage(1)"></div>
+        <div class="box" onclick="addClickAnimation(this); navigateToPage(2)"></div>
+        <div class="box" onclick="addClickAnimation(this); navigateToPage(2)"></div>
+    </div>     
     <div class="heart-frameBot">
         <img class="heart-imageBot" src="heart2.png" alt="heart2">
     </div>  
