--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Find my QR code!</title>
 </head>
+
 <body>
     <div class="header"></div>
     <div class="heart-frameTop">
-        <img class="heart-imageTop" src="heart1.png" alt="heart1">
-    </div>    
+        <img class="heart-imageTop" src="heart1.png" alt="heart1" onclick="addClickAnimation(this); navigateToPage(1)">
+    </div>
     <div class="container">
         <div class="box" onclick="addClickAnimation(this); navigateToPage(1)"></div>
         <div class="box" onclick="addClickAnimation(this); navigateToPage(2)"></div>
         <div class="box" onclick="addClickAnimation(this); navigateToPage(2)"></div>
-    </div>     
+    </div>
     <div class="heart-frameBot">
         <img class="heart-imageBot" src="heart2.png" alt="heart2">
-    </div>  
+    </div>
     <script src="script.js"></script>
 </body>
+
 </html>
