--- a/pageBank.html
+++ b/pageBank.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="page1.css"> <!-- Link to your CSS styles -->
+    <link rel="stylesheet" type="text/css" href="pageBank.css"> <!-- Link to your CSS styles -->
     <title>You are beautiful in white :3 </title>
 </head>
 
